Prepared for Kobara-Imai

--- a/Paper/includes/bibliography.bib
+++ b/Paper/includes/bibliography.bib
@@ -1,13 +1,12 @@
 %  priklad uvadzania literatury pre FEIstyle.bst
 %  naformatovane vstupy: book
 
-@book{anonlib,
-author = {PRATA, Stephen},
-title = {Mistrovství v C++},
-note = {ISBN: 008021680},
-editor = {[prekl.] Vozák David, Beroun Libor, Dokoupil Petr, Ptáèek Lubomír Sokol Boris},
-edition = {3},
-publisher = {Praha : Computer Press, 2007},
-year = 1997,
-pages = {s. 1119},
+@article{mceliece1978public,
+	title={A public-key cryptosystem based on algebraic coding theory},
+	author={McEliece, Robert J},
+	journal={DSN progress report},
+	volume={42},
+	number={44},
+	pages={114--116},
+	year={1978}
 }
