--- a/Paper/includes/introduction.tex
+++ b/Paper/includes/introduction.tex
@@ -1,2 +1,2 @@
-Pri kadom vyuívaní internetového prehliadaèa zanechávame v celosvetovej sieti internet stopy, ktoré o nás dokáu ve¾a vecí prezradi. Zoznam navštívenıch stránok prezrádza informácie o našich zá¾ubách, záujmoch, ale v istıch súvislostiach dokáe prezradi aj naše zamestnanie alebo školu, na ktorej študujeme. Reklamné spoloènosti napríklad na základe tıchto údajov dokáu cielene zamera reklamy, ktoré sa nám pri surfovaní zobrazujú a tım zvyšujú svoje zisky.\\
-\indent Existuje nieko¾ko metód, pomocou ktorıch sa dá aspoò...
+In today's world, cryptography has found its place in many areas of ordinary living and it is important to understand its limits. We have learnt the meaning of the word privacy, especially on the internet. We distribute private information on web sites, we save confidential information on our computers, we pay through internet banking believing and expecting that all of this is adequately defended. As time goes by have to realised that existence of a quantum computer is not any more just a dream. Existence of quantum computer may be a breakthrough in current cryptography, regarding its enormous power. We are facing a hard question. What would be in post-quantum world enough secure?
+....Tu popisem kapitoly snad
