--- a/Paper/includes/thanks.tex
+++ b/Paper/includes/thanks.tex
@@ -1,1 +1,1 @@
-I would like to express a gratitude to my thesis supervisor.
+I would like to express my deepest gratitude to my supervisor, doc. Ing. Pavol Zajac PhD., for his support and guidance. 
