--- a/Paper/ukazka_prace2.tex
+++ b/Paper/ukazka_prace2.tex
@@ -1,11 +1,11 @@
 \documentclass[dp,en]{FEIstyle}
 
-\FEIauthor{Michal Ližièiar}
-\FEItitle{Anonymizácia internetového prístupu na viac riadkov, ako sa len teda patrí pre takúto prácu...}
-\FEItitleEn{Anonymization of internet access}
+\FEIauthor{Martin Orem}
+\FEItitle{Bezpeèná implementácia McEliece kryptosystému}
+\FEItitleEn{Secure implementation of Mcelice Cryptosystem}
 \FEIregNr{FEI-5382-5982}
-\FEIsupervisor{Mgr. Ing. Matúš Jókay, PhD.}
-\FEIconsultant{Ing. Janko Hraško}
+\FEIsupervisor{doc. Ing. Pavol Zajac, PhD.}
+\FEIconsultant{Ing. František Uhrecký}
 
 \begin{document}
 \FEIpdfInfo
@@ -26,6 +26,6 @@
 \FEIresume{includes/resume}
 \FEIbibliography{includes/bibliography}{FEIstyle}
 \FEIlistOfAppendix
-\FEIappendix{Štruktúra elektronického nosièa}{includes/prilohaA}
+\FEIappendix{Structure of attached medium}{includes/prilohaA}
 \FEIappendix{Algoritmus}{includes/prilohaB}
 \end{document}
