Priprava na Hybrid

--- a/Paper/includes/abstract.tex
+++ b/Paper/includes/abstract.tex
@@ -1,1 +1,1 @@
-Práca sa zaoberá vytvorením zásuvného modulu pre internetovı prehliadaè, ktorı modifikuje informácie pouívané na identifikáciu pouívate¾a pri prístupe na server. V prvej èasti práce sa nachádza preh¾ad metód, ktoré zvyšujú anonymitu pri~prehliadaní webovıch stránok. Práca tie obsahuje zoznam dnes najpouívanejších rozšírení, ktorıch úlohou je zmena niektorıch identifikaènıch prvkov prehliadaèa alebo anonymizácia pomocou špeciálnych techník. V ïalšej èasti sa nachádza preh¾ad charakteristík prehliadaèa. Kombináciou tıchto charakteristík sa dá s vysokou mierou úspešnosti identifikova pouívate¾, ktorı danú stránku navštívil. Posledná èas práce obsahuje návrh, implementáciu a testovanie rozšírenia vytvoreného pre internetovı prehliadaè Mozilla Firefox. Popisuje zdrojovı kód rozšírenia, súvislos medzi charakteristikami prehliadaèa, zistené obmedzenia a postup riešenia. Vısledné rozšírenie zvyšuje anonymitu pouívate¾a modifikáciou niektorıch charakteristickıch prvkov prehliadaèa alebo blokovaním odosielania prvkov, ktoré nie je moné v rámci rozšírenia zmeni. Na rozdiel od dnes najpouívanejších modulov dokáe rozšírenie okrem modifikácie HTTP hlavièky, meni aj charakteristiky zisované pomocou JavaScript príkazov. 
+Kryptografia poskytuje v súèastnosti bezpeène komunikova nielen na internete. Dnešná kryptografia je prevané zaloená na problémoch, ktoré môu by riešené pomocou Shorovho algoritmu s pouitím kvantového poèítaèa. Preto existencia kvantového poèítaèa, ktorı by bol schopnı spracova nieko¾ko tisíc bitov naraz, by spôsobila skutoènı problém. Táto diplomová práca sa venuje zlepšeniu bezpeènosti kryptografickej kninice, ktorá by mala by voèi útoku kvantovım poèítaèom odolná. Zaèiatok práce je venovanı potrebnım informáciám pre pochopenie McElice kryptosystému. V ïalšej sekcii je analyzovaná kryptografická kninica spolu s CCA a KEM. V tretej sekcii je moné nájs návrh nášho zlepšenia kninice. Nasledujúce sekcie sa venujú samotnej implementácií s prisluchajúcimi testami. V závere popisujeme dosiahnuté vısledky.
