--- a/Paper/ukazka_prace2.tex
+++ b/Paper/ukazka_prace2.tex
@@ -12,8 +12,8 @@
 \FEIcover
 \FEItitlePage
 \FEIassignment {includes/assignment.jpeg}
-\FEIabstract{includes/abstract}{anonymizácia, identifikácia používate¾a, zásuvný modul, Mozilla Firefox, internet}
-\FEIabstractEn{includes/abstractEN}{anonymization, identification of user, plugin, Mozilla Firefox, internet}
+\FEIabstract{includes/abstract}{kryptografia, KEM, McElice kryptosystém}
+\FEIabstractEn{includes/abstractEN}{crypto, McElice, KEM, CCA}
 \FEIdeclaration{includes/declaration}
 \FEIthanks{includes/thanks}
 \FEIcontent
