--- a/Paper/includes/abstractEN.tex
+++ b/Paper/includes/abstractEN.tex
@@ -1,1 +1,2 @@
-The bachelor thesis is about creating of a plugin for web browser, that modifies information used to identification of user during accessing a server. There is an~overview of methods that increase anonymity during browsing websites, in~the~first part. The thesis also contains a list of the most used extensions nowadays, that function is a change of some identification components of browser or special ways of anonymization. In the next part of the thesis is an overview of the characteristics of web browser. By combination of these characteristics we can with high level of success identify a user, who have visited the web site. The last part of~thesis contains project, implementation and testing of extension created for the web browser Mozilla Firefox. There is also description of source code of extension, the link between the characteristics of web browser, detected limitations and way how to solve them. The resulting extension increases anonymity of user by modification of some characteristic components of web browser or by blocking sending components, that can not be in extension changed. In comparison with most used modules nowadays, this module can modify HTTP headers including characteristics detected by JavaScript commands.
+Crystography provides a secure way of communication in today's world. Current cryptography is mainly based on problems, which could be solved by Shor's algorithm by using a quantum computer. Therefore, the existence of Quantum Computers in the range of 1000 bits would be a real world threat. This thesis is dedicated to improvement of cryptographic library, that should be resistant against such threats. 
+The thesis contains an overview of McElice cryptosystem and it's security against CCA attacks. The first section discuss necessary preliminaries. In the further section, current state of the library is analysed. The section also contains an analysis of missing features like secure CCA2 conversion, KEM. The other sections of the thesis are dedicated to our contribution and implementation with corresponding tests. In the end of the thesis, accomplished results are discussed.
